--- a/app/views/adding-value-2024/current/eligibility/funding/cost.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/cost.html
@@ -26,8 +26,7 @@
                 </p>
 
                 <p class="govuk-hint">
-                    The minimum grant you can apply for this project is £20,000 (50% of £40,000).<br>
-                    The maximum grant is £500,000.
+                    The minimum grant you can apply for this project is £20,000 (50% of £40,000). The maximum grant is £500,000.
                 </p>
 
                 {% set hintHtml %}
