--- a/app/views/adding-value-2024/current/details/applicant-details.html
+++ b/app/views/adding-value-2024/current/details/applicant-details.html
@@ -1,144 +1,194 @@
 {% extends 'adding-value-2024/layout.html' %}
 
 {% block pageTitle %}
-  Your details
-{% endblock %}
-
-{% block beforeContent %}
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-  {{ govukPhaseBanner({
-    tag: {
-    text: "Prototype",
-    classes: "govuk-tag--pink"
-    },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
-  }) }}
-
-  <a class="govuk-back-link" href="javascript:window.history.back()">Back</a>
+    Applicant details
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
+
+<div class="govuk-grid-row">
+
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" id="mainForm" action="check-details" method="post">
-        <h1 class="govuk-heading-l"> Applicant's details</h1>
-        <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Name</h2>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="farmer-firstname">
-            First name
-          </label>
-          <input class="govuk-input govuk-!-width-one-half" id="farmer-firstname" name="farmer-firstname" type="text" spellcheck="false" autocomplete="name" value="{{ data['farmer-firstname'] }}">
-        </div>
+        <form action="check-details">
 
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="farmer-lastname">
-            Last name
-          </label>
-          <input class="govuk-input govuk-!-width-one-half" id="farmer-lastname" name="farmer-lastname" type="text" spellcheck="false" autocomplete="name" value="{{ data['farmer-lastname'] }}">
-        </div>
+            <h1 class="govuk-heading-l">
+                Applicant's details
+            </h1>
 
+            {{ govukInput ({
+                id: 'farmer-firstname',
+                name: 'farmer-firstname',
+                classes: 'govuk-!-width-one-half',
+                value: data['farmer-firstname'] if data['farmer-firstname'] else '',
+                label: {
+                    text: 'First name'
+                }
+            }) }}
 
-        <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Contact details</h2>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="farmer-email">
-              Email address
-              <div id="event-name-hint" class="govuk-hint">
-              {% if data['applicant'] === "Agent" %} We’ll only use this to send them confirmation
-                         {% else %}
-                         We’ll only use this to send you confirmation
-                         {% endif %}
-              </div>
+            {{ govukInput ({
+                id: 'farmer-lastname',
+                name: 'farmer-lastname',
+                classes: 'govuk-!-width-one-half',
+                value: data['farmer-lastname'] if data['farmer-lastname'] else '',
+                label: {
+                    text: 'Last name'
+                }
+            }) }}
 
-          </label>
-          <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-email" name="farmer-email" type="farmer-email" spellcheck="false" aria-describedby="farmer-email-hint" autocomplete="farmer-email" value="{{ data['farmer-email'] }}">
-        </div>
+            {{ govukInput ({
+                id: 'farmer-email',
+                name: 'farmer-email',
+                classes: 'govuk-!-width-two-thirds',
+                value: data['farmer-email'] if data['farmer-email'] else '',
+                hint: {
+                    text: 'We will only use this to send you a confirmation'
+                },
+                label: {
+                    text: 'Email address'
+                }
+            }) }}
 
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="farmer-landline">
-              Mobile number
-          </label>
-          <div id="mobile-name-hint" class="govuk-hint">
-            {% if data['applicant'] === "Agent" %} We will only use this to contact them about their application
-                       {% else %}
-                       We will only use this to contact you about your application
-                       {% endif %}
-            </div>
-          <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-landline" name="farmer-landline" type="farmer-landline" spellcheck="false" aria-describedby="farmer-landline-hint" autocomplete="farmer-landline" value="{{ data['farmer-landline'] }}">
-        </div>
+            {{ govukInput ({
+                id: 'confirm-email',
+                name: 'confirm-email',
+                classes: 'govuk-!-width-two-thirds',
+                value: data['confirm-email'] if data['confirm-email'] else '',
+                label: {
+                    text: 'Confirm email address'
+                }
+            }) }}
 
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="farmer-mobile">
-              Landline number
-          </label>
-          <div id="landline-name-hint" class="govuk-hint">
-            {% if data['applicant'] === "Agent" %} We will only use this to contact them about their application
-                       {% else %}
-                       We will only use this to contact you about your application
-                       {% endif %}
-          </div>
-          <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-mobile" name="farmer-mobile" type="farmer-mobile" spellcheck="false" aria-describedby="farmer-mobile-hint" autocomplete="farmer-mobile" value="{{ data['farmer-mobile'] }}">
-        </div>
+            {{ govukInput ({
+                id: 'farmer-landline',
+                name: 'farmer-landline',
+                classes: 'govuk-!-width-two-thirds',
+                value: data['farmer-landline'] if data['farmer-landline'] else '',
+                hint: {
+                    text: 'We will only use this to contact you about your application'
+                },
+                label: {
+                    text: 'Landline number'
+                }
+            }) }}
 
-        <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-3">Business address</h2>
-        <div class="govuk-form-group">
-            <label class="govuk-label" for="farmer-address1">
-              Building and street
-            </label>
-            <input class="govuk-input govuk-!-width-two-thirds" id="farmer-address1" name="farmer-address1" type="farmer-address1" spellcheck="false" aria-describedby="farmer-address1-hint" autocomplete="farmer-address1" value="{{ data['farmer-address1'] }}">
-        </div>
+            {{ govukInput ({
+                id: 'farmer-mobile',
+                name: 'farmer-mobile',
+                classes: 'govuk-!-width-two-thirds',
+                value: data['farmer-mobile'] if data['farmer-mobile'] else '',
+                hint: {
+                    text: 'We will only use this to contact you about your application'
+                },
+                label: {
+                    text: 'Mobile number'
+                }
+            }) }}
 
-        <div class="govuk-form-group">
-            <input class="govuk-input govuk-!-width-two-thirds" id="farmer-address2" name="farmer-address2" type="farmer-address2" spellcheck="false" aria-describedby="farmer-address2-hint" autocomplete="farmer-address2" value="{{ data['farmer-address2'] }}">
-        </div>
+            {% call govukFieldset({
+              legend: {
+                text: 'Business address',
+                classes: 'govuk-fieldset__legend--m',
+                isPageHeading: true
+              }
+            }) %}
 
-        <div class="govuk-form-group">
-            <label class="govuk-label" for="farmer-town">
-                Town
-            </label>
-            <input class="govuk-input govuk-!-width-one-half" id="farmer-town" name="farmer-town" type="farmer-town" spellcheck="false" aria-describedby="farmer-town-hint" autocomplete="farmer-town" value="{{ data['farmer-town'] }}">
-        </div>
+              {{ govukInput({
+                label: {
+                  text: 'Address line 1'
+                },
+                id: 'farmer-address1',
+                name: 'farmer-address1',
+                classes: 'govuk-!-width-two-thirds',
+                value: data['farmer-address1'] if data['farmer-address1'] else '',
+                autocomplete: 'address-line1'
+              }) }}
 
-        <div class="govuk-form-group">
-            <label class="govuk-label" for="farmer-county">
-                County
-            </label>
-            <input class="govuk-input govuk-!-width-one-half" id="farmer-county" name="farmer-county" type="farmer-county" spellcheck="false" aria-describedby="farmer-county-hint" autocomplete="farmer-county" value="{{ data['farmer-county'] }}">
-        </div>
+              {{ govukInput({
+                label: {
+                  text: 'Address line 2 (optional)'
+                },
+                id: 'farmer-address2',
+                name: 'farmer-address2',
+                classes: 'govuk-!-width-two-thirds',
+                value: data['farmer-address2'] if data['farmer-address2'] else '',
+                autocomplete: 'address-line2'
+              }) }}
 
-        <div class="govuk-form-group">
-            <label class="govuk-label" for="farmer-postcode">
-                Business postcode
-            </label>
-            <input class="govuk-input govuk-!-width-one-quarter" id="farmer-postcode" name="farmer-postcode" type="farmer-postcode" spellcheck="false" aria-describedby="farmer-postcode-hint" autocomplete="farmer-postcode" value="{{ data['farmer-postcode'] }}">
-        </div>
+              {{ govukInput({
+                label: {
+                  text: 'Town'
+                },
+                id: 'farmer-town',
+                name: 'farmer-town',
+                classes: 'govuk-!-width-one-half',
+                value: data['farmer-town'] if data['farmer-town'] else '',
+                autocomplete: 'address-town'
+              }) }}
 
-        <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="project-postcode-hint">
-                <legend class="govuk-fieldset__legend">
-                  <h1 class="govuk-fieldset__heading">
-                    Project postcode
-                  </h1>
-                </legend>
-                <div id="contact-hint" class="govuk-hint">
-                  The site postcode where the work will happen
-                </div>
+              {{ govukSelect({
+                id: 'farmer-county',
+                name: 'farmer-county',
+                label: {
+                  text: 'County'
+                },
+                items: [
+                  {
+                    value: 'greater-london',
+                    text: 'Greater London'
+                  },
+                  {
+                    value: 'west-midlands',
+                    text: 'West Midlands',
+                    selected: true
+                  },
+                  {
+                    value: 'greater-manchester',
+                    text: 'Greater Manchester'
+                  },
+                  {
+                    value: 'west-yorkshire',
+                    text: 'West Yorkshire'
+                  }
+                ]
+              }) }}
 
-            <input class="govuk-input govuk-!-width-one-quarter" id="project-postcode" name="project-postcode" type="project-postcode" spellcheck="false" aria-describedby="project-postcode-hint" autocomplete="project-postcode" value="{{ data['project-postcode'] }}">
-            </fieldset>
-            </div>
+              {{ govukInput({
+                label: {
+                  text: 'Business postcode'
+                },
+                id: 'farmer-postcode',
+                name: 'farmer-postcode',
+                classes: 'govuk-!-width-one-quarter',
+                value: data['farmer-postcode'] if data['farmer-postcode'] else '',
+                autocomplete: 'address-business-postcode'
+              }) }}
 
+              {{ govukInput({
+                label: {
+                  text: 'Project postcode'
+                },
+                id: 'project-postcode',
+                name: 'project-postcode',
+                classes: 'govuk-!-width-one-quarter',
+                value: data['project-postcode'] if data['project-postcode'] else '',
+                hint: {
+                    text: 'The site postcode where the work will happen'
+                },
+                autocomplete: 'address-project-postcode'
+              }) }}
 
-      
+            {% endcall %}
 
+            {{ govukButton ({
+                html: 'Continue'
+            }) }}
 
-        <button class="govuk-button govuk-!-margin-top-6 govuk-!-margin-right-1" data-module="govuk-button">
-          Continue
-        </button>
+        </form>
 
-
-      </form>
     </div>
-  </div>
+
+</div>
+
 
 {% endblock %}
