--- a/app/views/adding-value-2024/current/details/confirmation.html
+++ b/app/views/adding-value-2024/current/details/confirmation.html
@@ -25,7 +25,7 @@
       </p>
       
       <p>
-        If you do not get an email within 72 hours, please call the RPA helpline and follow the options for the Farming Transformation Fund scheme:
+        If you do not get an email within 72 hours, call the RPA helpline and follow the options for the Farming Transformation Fund scheme.
       </p>
 
       <h2 class="govuk-heading-m">RPA helpline</h2>
@@ -50,10 +50,10 @@
 <p class="govuk-heading-m">What happens next</p>
 <ol class="govuk-list govuk-list--number govuk-list--spaced">
   <li>
-    RPA will be in touch when the full application period opens. They will tell you if your project scored well enough to get the full application form.
+    The RPA will contact you when the full application period opens. They will tell you if your project scored well enough to get the full application form.
   </li>
   <li>
-    If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.
+    If you submit an application, the RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.
   </li>
   <li>
     If your application is successful, you'll be sent a funding agreement and can begin work on the project.
@@ -73,6 +73,12 @@
           <li>get quotes from suppliers</li>
           <li>apply for planning permission</li>
         </ul>
+
+      {% if data['tenancy'] == 'No' %}
+      <div class="govuk-inset-text">
+          If you want your landlord to underwrite your project, you will need them to sign a letter of assurance. This letter will say your landlord agrees to take over your project, including conditions in the Grant Funding Agreement, if your tenancy ends. You should discuss and agree this with your landlord before you begin your full application.
+        </div>
+      {% endif %}
 
       <p><a href="#" class="govuk-link">What do you think of this service?</a></p>
 
