--- a/app/views/layinghens/current/details/check-answers.html
+++ b/app/views/layinghens/current/details/check-answers.html
@@ -80,7 +80,7 @@
         </div>
         <div class="govuk-summary-list__row ">
           <dt class="govuk-summary-list__key">
-            Business turnover
+            Annual Business turnover
 
           </dt>
           <dd class="govuk-summary-list__value">
