--- a/app/views/adding-value-2024/current/details/check-details.html
+++ b/app/views/adding-value-2024/current/details/check-details.html
@@ -80,7 +80,7 @@
         </div>
         <div class="govuk-summary-list__row ">
           <dt class="govuk-summary-list__key">
-            Annual Business turnover
+            Annual business turnover
 
           </dt>
           <dd class="govuk-summary-list__value">
