side bar header change

--- a/app/views/adding-value-2024/current/scoring/manual-labour.html
+++ b/app/views/adding-value-2024/current/scoring/manual-labour.html
@@ -60,7 +60,7 @@
 
             <div class="app-step-nav-related app-step-nav-related--singular">
                 <h2 class="app-step-nav-related__heading">
-                <span class="app-step-nav-related__pretitle">Eligibility</span>
+                <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
                     RPA wants to fund projects that increases the use of automation due to the current manual labour shortage.
