--- a/app/views/adding-value-2024/current/scoring/manual-labour-amount.html
+++ b/app/views/adding-value-2024/current/scoring/manual-labour-amount.html
@@ -69,7 +69,7 @@
 
             <div class="app-step-nav-related app-step-nav-related--singular">
                 <h2 class="app-step-nav-related__heading">
-                <span class="app-step-nav-related__pretitle">Eligibility</span>
+                <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
                     RPA wants to fund projects that reduce the need for manual labour due to the current shortage.
