give feedback routing

--- a/app/views/adding-value-2024/layout.html
+++ b/app/views/adding-value-2024/layout.html
@@ -52,7 +52,7 @@ Adding Value Grant",
             items: [
                 {
                     text: "Give feedback",
-                    href: "#"
+                    href: "/adding-value-2024"
                 },
                 {
                     text: "Manage prototype",
