--- a/app/views/adding-value-2024/current/eligibility/common/business-type.html
+++ b/app/views/adding-value-2024/current/eligibility/common/business-type.html
@@ -46,7 +46,7 @@
                             }
                         },
                         {
-                            text: 'Woodland management processing venison products',
+                            text: 'A woodland manager processing wild venison products',
                             value: 'venison',
                             checked: true if data['business-type'] == 'venison',
                             attributes: {
@@ -93,7 +93,7 @@
                         are a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers
                     </li>
                     <li>
-                        produce venison products as part of woodland management
+                        produce wild venison products as part of woodland management
                     </li>
                 </ul>
 
