--- a/app/views/adding-value-2024/current/scoring/produce.html
+++ b/app/views/adding-value-2024/current/scoring/produce.html
@@ -47,9 +47,9 @@
                             }
                         },
                         {
-                            text: 'Venison meat produce',
-                            value: 'Venison meat produce',
-                            checked: true if data['scoring-produce'] == 'Venison meat produce',
+                            text: 'Wild venison meat produce',
+                            value: 'Wild venison meat produce',
+                            checked: true if data['scoring-produce'] == 'Wild venison meat produce',
                             hint: {
                                 text: 'For example, slaughtering, cutting, processing and packing venison meat'
                             }
