--- a/app/views/adding-value-2024/current/start-page.html
+++ b/app/views/adding-value-2024/current/start-page.html
@@ -44,7 +44,7 @@
           are a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers
         </li>
         <li>
-          produce venison products as part of woodland management        
+          produce wild venison products as part of woodland management        
         </li>
         <li>
           will do the grant-funded work in England
