--- a/app/views/adding-value-2024/current/eligibility/common/elim-business-type.html
+++ b/app/views/adding-value-2024/current/eligibility/common/elim-business-type.html
@@ -26,7 +26,7 @@
                         are a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers
                     </li>
                     <li>
-                        produce venison products as part of woodland management
+                        produce wild venison products as part of woodland management
                     </li>
                 </ul>
 
