--- a/app/views/adding-value-2024/current/scoring/produce.html
+++ b/app/views/adding-value-2024/current/scoring/produce.html
@@ -51,7 +51,7 @@
                             value: 'Wild venison meat produce',
                             checked: true if data['scoring-produce'] == 'Wild venison meat produce',
                             hint: {
-                                text: 'For example, slaughtering, cutting, processing and packing venison meat'
+                                text: 'For example, slaughtering, cutting, processing and packing wild venison meat'
                             }
                         },
                         {
