--- a/app/views/adding-value-2024/current/scoring/value.html
+++ b/app/views/adding-value-2024/current/scoring/value.html
@@ -43,7 +43,7 @@
                             value: 'Grading or sorting produce',
                             checked: true if data['scoring-value'] == 'Grading or sorting produce',
                             hint: {
-                                text: 'For example, washing and grading vegetables, egg grading optical grading of top fruit'
+                                text: 'For example, washing and grading vegetables, egg grading, optical grading of top fruit'
                             }
                         },
                         {
