--- a/app/views/adding-value-2024/current/eligibility/common/elim-legal-status.html
+++ b/app/views/adding-value-2024/current/eligibility/common/elim-legal-status.html
@@ -68,7 +68,7 @@
 
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
-                        See other grants you may be eligible for.
+                        See other grants you may be eligible for
                     </a>
                 </p>
 
