--- a/app/views/ahw-adult-cattle-housing/current/details/agent-details.html
+++ b/app/views/ahw-adult-cattle-housing/current/details/agent-details.html
@@ -1,7 +1,7 @@
-{% extends 'ahw-adult-cattle-housing/layout.html' %}
+{% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    Applicant details
+    Agent details
 {% endblock %}
 
 {% block content %}
@@ -10,37 +10,47 @@
 
     <div class="govuk-grid-column-two-thirds">
 
-        <form action="check-answers">
+        <form method="post" action="check-answers">
 
             <h1 class="govuk-heading-l">
-                Applicant's details
+                Agent's details
             </h1>
 
             {{ govukInput ({
-                id: 'farmer-firstname',
-                name: 'farmer-firstname',
+                id: 'agent-firstname',
+                name: 'agent-firstname',
                 classes: 'govuk-!-width-one-half',
-                value: data['farmer-firstname'] if data['farmer-firstname'] else '',
+                value: data['agent-firstname'] if data['agent-firstname'] else '',
                 label: {
                     text: 'First name'
                 }
             }) }}
 
             {{ govukInput ({
-                id: 'farmer-lastname',
-                name: 'farmer-lastname',
+                id: 'agent-lastname',
+                name: 'agent-lastname',
                 classes: 'govuk-!-width-one-half',
-                value: data['farmer-lastname'] if data['farmer-lastname'] else '',
+                value: data['agent-lastname'] if data['agent-lastname'] else '',
                 label: {
                     text: 'Last name'
                 }
             }) }}
 
             {{ govukInput ({
-                id: 'farmer-email',
-                name: 'farmer-email',
+                id: 'agent-business',
+                name: 'agent-business',
+                classes: 'govuk-!-width-one-half',
+                value: data['agent-business'] if data['agent-business'] else '',
+                label: {
+                    text: 'Business name'
+                }
+            }) }}
+
+            {{ govukInput ({
+                id: 'agent-email',
+                name: 'agent-email',
                 classes: 'govuk-!-width-two-thirds',
-                value: data['farmer-email'] if data['farmer-email'] else '',
+                value: data['agent-email'] if data['agent-email'] else '',
                 hint: {
                     text: 'We will only use this to send you a confirmation'
                 },
@@ -60,10 +70,10 @@
             }) }}
 
             {{ govukInput ({
-                id: 'farmer-landline',
-                name: 'farmer-landline',
+                id: 'agent-landline',
+                name: 'agent-landline',
                 classes: 'govuk-!-width-two-thirds',
-                value: data['farmer-landline'] if data['farmer-landline'] else '',
+                value: data['agent-landline'] if data['agent-landline'] else '',
                 hint: {
                     text: 'We will only use this to contact you about your application'
                 },
@@ -73,10 +83,10 @@
             }) }}
 
             {{ govukInput ({
-                id: 'farmer-mobile',
-                name: 'farmer-mobile',
+                id: 'agent-mobile',
+                name: 'agent-mobile',
                 classes: 'govuk-!-width-two-thirds',
-                value: data['farmer-mobile'] if data['farmer-mobile'] else '',
+                value: data['agent-mobile'] if data['agent-mobile'] else '',
                 hint: {
                     text: 'We will only use this to contact you about your application'
                 },
@@ -97,10 +107,10 @@
                 label: {
                   text: 'Address line 1'
                 },
-                id: 'farmer-address1',
-                name: 'farmer-address1',
+                id: 'agnet-address1',
+                name: 'agent-address1',
                 classes: 'govuk-!-width-two-thirds',
-                value: data['farmer-address1'] if data['farmer-address1'] else '',
+                value: data['agent-address1'] if data['agent-address1'] else '',
                 autocomplete: 'address-line1'
               }) }}
 
@@ -108,27 +118,28 @@
                 label: {
                   text: 'Address line 2 (optional)'
                 },
-                id: 'farmer-address2',
-                name: 'farmer-address2',
+                id: 'agent-address2',
+                name: 'agent-address2',
                 classes: 'govuk-!-width-two-thirds',
-                value: data['farmer-address2'] if data['farmer-address2'] else '',
-                autocomplete: 'address-line2'
+                value: data['agent-address2'] if data['agent-address2'] else '',
+                autocomplete: 'agent-line2'
               }) }}
 
               {{ govukInput({
                 label: {
                   text: 'Town'
                 },
-                id: 'farmer-town',
-                name: 'farmer-town',
+                id: 'agent-town',
+                name: 'agent-town',
                 classes: 'govuk-!-width-one-half',
-                value: data['farmer-town'] if data['farmer-town'] else '',
+                value: data['agent-town'] if data['agent-town'] else '',
                 autocomplete: 'address-town'
               }) }}
 
+              
               {{ govukSelect({
-                id: 'farmer-county',
-                name: 'farmer-county',
+                id: 'agent-county',
+                name: 'agent-county',
                 label: {
                   text: 'County'
                 },
@@ -155,27 +166,13 @@
 
               {{ govukInput({
                 label: {
-                  text: 'Business postcode'
+                  text: 'Postcode'
                 },
-                id: 'farmer-postcode',
-                name: 'farmer-postcode',
+                id: 'agent-postcode',
+                name: 'agent-postcode',
                 classes: 'govuk-!-width-one-quarter',
-                value: data['farmer-postcode'] if data['farmer-postcode'] else '',
+                value: data['agent-postcode'] if data['agent-postcode'] else '',
                 autocomplete: 'address-business-postcode'
-              }) }}
-
-              {{ govukInput({
-                label: {
-                  text: 'Project postcode'
-                },
-                id: 'project-postcode',
-                name: 'project-postcode',
-                classes: 'govuk-!-width-one-quarter',
-                value: data['project-postcode'] if data['project-postcode'] else '',
-                hint: {
-                    text: 'The site postcode where the work will happen'
-                },
-                autocomplete: 'address-project-postcode'
               }) }}
 
             {% endcall %}
