--- a/app/views/ahw-adult-cattle-housing/current/details/check-answers.html
+++ b/app/views/ahw-adult-cattle-housing/current/details/check-answers.html
@@ -1,4 +1,4 @@
-{% extends 'layinghens/current/views/layouts/layout-old.html' %}
+{% extends 'ahw-adult-cattle-housing/layout.html' %}
 
 {% block pageTitle %}
    Check Your Details
@@ -80,7 +80,7 @@
         </div>
         <div class="govuk-summary-list__row ">
           <dt class="govuk-summary-list__key">
-            Annual Business turnover
+            Annual business turnover
 
           </dt>
           <dd class="govuk-summary-list__value">
@@ -121,10 +121,9 @@
 
       </dl>
 
-
       {# include agent details only if applicant is Agent  #}
 
-      {% if (data['applying']== "Agent") %}
+      {% if (data['applying'] == "Agent") %}
 
       <table class="govuk-table">
           <thead class="govuk-table__head">
@@ -194,81 +193,81 @@
       </dl>
 
   </table>
+{% endif %}
 
-  {% else %}
 
-  <table class="govuk-table">
-      <thead class="govuk-table__head">
-          <tr class="govuk-table__row">
-              <div class="govuk-summary-list__row--no-border">
-                  <dt class="govuk-summary-list__key">
-                      <p class="govuk-heading-m"><strong>Applicant's details</strong></p>
-                  </dt>
-                  <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link govuk-body" href="applicant-details">
-                          Change<span class="govuk-visually-hidden">applicant's details</span>
-                      </a>
-                  </dd>
-              </div>
-          </tr>
-          <hr>
-      </thead>
+<table class="govuk-table">
+    <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+            <div class="govuk-summary-list__row--no-border">
+                <dt class="govuk-summary-list__key">
+                    <p class="govuk-heading-m"><strong>Applicant's details</strong></p>
+                </dt>
+                <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link govuk-body" href="applicant-details">
+                        Change<span class="govuk-visually-hidden">applicant's details</span>
+                    </a>
+                </dd>
+            </div>
+        </tr>
+        <hr>
+    </thead>
 
-      <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Name
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{data['farmer-firstname']}} {{data['farmer-lastname']}}
-          </dd>
-          <dd class="govuk-summary-list__actions">
+    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Name
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{data['farmer-firstname']}} {{data['farmer-lastname']}}
+        </dd>
+        <dd class="govuk-summary-list__actions">
 
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-          Contact details
-          </dt>
-          <dd class="govuk-summary-list__value">
-                {{ data['farmer-email'] }}
-            <br>{{ data['farmer-landline'] }}
-            <br>{{ data['farmer-mobile'] }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+        Contact details
+        </dt>
+        <dd class="govuk-summary-list__value">
+              {{ data['farmer-email'] }}
+          <br>{{ data['farmer-landline'] }}
+          <br>{{ data['farmer-mobile'] }}
+        </dd>
+        <dd class="govuk-summary-list__actions">
 
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Business address
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ data['farmer-address1'] }}
-            <br> {{ data['farmer-address2'] }}
-                {{ data['farmer-county']}}
-            <br> {{ data['farmer-postcode'] }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Business address
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{ data['farmer-address1'] }}
+          <br> {{ data['farmer-address2'] }}
+ {{ data['farmer-county']}}
+          <br> {{ data['farmer-postcode'] }}
+        </dd>
+        <dd class="govuk-summary-list__actions">
 
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Project postcode
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{data['project-postcode']}}
-          </dd>
-          <dd class="govuk-summary-list__actions">
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Project postcode
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{data['project-postcode']}}
+        </dd>
+        <dd class="govuk-summary-list__actions">
 
-          </dd>
-        </div>
-      </dl>
+        </dd>
+      </div>
 
-  </table>
+    </dl>
 
-  {% endif %}
+</table>
+
 
         </div>
      </div>
