--- a/app/views/ahw-adult-cattle-housing/current/details/agent-details.html
+++ b/app/views/ahw-adult-cattle-housing/current/details/agent-details.html
@@ -10,7 +10,7 @@
 
     <div class="govuk-grid-column-two-thirds">
 
-        <form method="post" action="check-answers">
+        <form method="post" action="applicant-details">
 
             <h1 class="govuk-heading-l">
                 Agent's details
