--- a/app/views/adding-value-2024/current/eligibility/common/business-type.html
+++ b/app/views/adding-value-2024/current/eligibility/common/business-type.html
@@ -22,6 +22,9 @@
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
+                    hint: {
+                        text: 'Select one option'
+                    },
                     items: [
                         {
                             text: 'A grower or producer of agricultural or horticultural produce',
