--- a/app/views/adding-value-2024/current/eligibility/adding-value/storage.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/storage.html
@@ -6,6 +6,10 @@
 
 {% block content %}
 
+{% if data['items-needed'] == 'None' %}
+    {{ 'elim-items-needed' | redirect | safe }}
+{% endif %}
+
 <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-two-thirds">
